added carousel with icons, need to add links to docs for each icon, text, and resume

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -181,3 +181,17 @@ a:active {
   background-color: #7332af;
   color: white;
 }
+
+.img-container-icon {
+    height: 300px;
+    width: 100%;
+    background: none;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+.devicon {
+    font-size: 18rem;
+}
