--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -24,30 +24,165 @@
             </div>
         </div>
     </div>
-    {{!-- <div class="row">
-        <div class="code-icons"><i class="devicon-bootstrap-plain"></i>
+
+    {{!-- Need to add resume on this page --}}
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-mongodb-plain-wordmark colored"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href=""> <i class="devicon devicon-sequelize-plain-wordmark colored"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href=""><i class="devicon devicon-slack-plain-wordmark colored"></i></a>
+
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href=""> <i class="devicon devicon-npm-original-wordmark colored"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-nodejs-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-mysql-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-jquery-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-javascript-plain colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-html5-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-heroku-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-handlebars-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-git-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-express-original colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-css3-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-chrome-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-travis-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="">
+                                <i class="devicon devicon-visualstudio-plain-wordmark colored"></i>
+
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
-        <div class="code-icons"><i class="devicon-css3-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-express-original"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-handlebars-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-heroku-original"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-html5-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-javascript-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-jquery-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-mysql-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-nodejs-plain"></i>
-        </div>
-        <div class="code-icons"><i class="devicon-visualstudio-plain"></i>
-        </div>
-    </div> --}}
+    </div>
+
+
 
 
 
