added resume button; need to link resume after updating; still need docs links for icons

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -21,6 +21,8 @@
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/contact"><button type="button"
                         class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
+                <a href=""><button type="button"
+                        class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
     </div>
