--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,7 @@ a:active {
 }
 
 .jumbotron {
-  animation-duration: 1s;
+  animation-duration: .55s;
   animation-name: slidein-to-left;
 }
 
@@ -64,6 +64,17 @@ a:active {
   border-radius: 50% !important;
   margin: 18px;
   animation-duration: 1.66s;
+  animation-name: slidein-to-left;
+}
+
+.btn-resume {
+  background-color: #7332af;
+  color: white;
+  width: 80px !important;
+  height: 80px !important;
+  border-radius: 50% !important;
+  margin: 18px;
+  animation-duration: 2.66s;
   animation-name: slidein-to-left;
 }
 
@@ -183,15 +194,15 @@ a:active {
 }
 
 .img-container-icon {
-    height: 300px;
-    width: 100%;
-    background: none;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
+  height: 300px;
+  width: 100%;
+  background: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
 }
 
 .devicon {
-    font-size: 18rem;
+  font-size: 18rem;
 }
