--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -17,6 +17,8 @@
                 <a href="/portfolio"><button type="button"
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
+                <a href=""><button type="button"
+                        class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
     </div>
