--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -17,6 +17,8 @@
                 </div>
                 <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
+                <a href=""><button type="button"
+                        class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
     </div>
