added resume; updated minor text features; still need docs links for icons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -206,3 +206,14 @@ a:active {
 .devicon {
   font-size: 18rem;
 }
+
+.card-tools {
+    background: none;
+    margin-top: 40px;
+}
+
+.carousel {
+    margin-top: 40px;
+}
+
+
