--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -21,8 +21,7 @@
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/contact"><button type="button"
                         class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
-                <a href=""><button type="button"
-                        class="btn btn-sm shadow btn-resume">Resume</button></a>
+                <a href="https://www.resumonk.com/download/users/1009511/resumes/1079206.pdf"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
     </div>
@@ -30,8 +29,17 @@
     {{!-- Need to add resume on this page --}}
 
     <div class="row">
-        <div class="col-sm-12">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="col-sm-12 col-lg-4">
+            <div class="card-body card-tools">
+                <h3 class="text-dark">Here are some of the <span style="color: #7332af;">tools </span>I use on a daily basis. Click an <span style="color: #7332af;">icon </span> to check out the docs, or use the <span style="color: #7332af;">arrows </span> to navigate!</h3>
+
+
+            </div>
+
+
+        </div>
+        <div class="col-sm-12 col-lg-8">
+            <div id="carousel-controllers" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="img-container-icon">
@@ -52,7 +60,7 @@
 
                         </div>
                     </div>
-                    
+
                     <div class="carousel-item">
                         <div class="img-container-icon">
                             <a href=""> <i class="devicon devicon-npm-original-wordmark colored"></i>
@@ -172,11 +180,11 @@
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carousel-controllers" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carousel-controllers" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
