--- a/views/contact-failure.handlebars
+++ b/views/contact-failure.handlebars
@@ -3,7 +3,7 @@
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
                 <h1 class="display-3" style="color: #ececec;">Big<span style="color: #c095e9;">
-                        Yikes</span></h1>
+                        Yikes!</span></h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">Oops! Something went wrong when you tried to send that email. You might want
                     to try sending me a message on LinkedIn until I can figure out what happened. Use the LinkedIn icon
@@ -18,7 +18,7 @@
                 <a href="/portfolio"><button type="button"
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
-                <a href=""><button type="button"
+                <a href="https://www.resumonk.com/download/users/1009511/resumes/1079206.pdf"><button type="button"
                         class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
