--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -17,7 +17,7 @@
                 </div>
                 <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
-                <a href=""><button type="button"
+                <a href="https://www.resumonk.com/download/users/1009511/resumes/1079206.pdf"><button type="button"
                         class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
