--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -21,17 +21,15 @@
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/contact"><button type="button"
                         class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
-                <a href="https://www.resumonk.com/download/users/1009511/resumes/1079206.pdf"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
+                <a href="/public/Resume 12:5.pdf"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
     </div>
 
-    {{!-- Need to add resume on this page --}}
-
     <div class="row">
         <div class="col-sm-12 col-lg-4">
             <div class="card-body card-tools">
-                <h3 class="text-dark">Here are some of the <span style="color: #7332af;">tools </span>I use on a daily basis. Click an <span style="color: #7332af;">icon </span> to check out the docs, or use the <span style="color: #7332af;">arrows </span> to navigate!</h3>
+                <h3 class="text-dark">Here are some of the <span style="color: #7332af;">tools </span>I use on a daily basis. Click an <span style="color: #7332af;">icon </span> to check them out, or use the <span style="color: #7332af;">arrows </span> to navigate!</h3>
 
 
             </div>
@@ -43,33 +41,33 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://www.mongodb.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-mongodb-plain-wordmark colored"></i>
                             </a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href=""> <i class="devicon devicon-sequelize-plain-wordmark colored"></i>
+                             <a href="https://sequelize.org/" target="_blank" rel="noreferrer"> <i class="devicon devicon-sequelize-plain-wordmark colored"></i>
                             </a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href=""><i class="devicon devicon-slack-plain-wordmark colored"></i></a>
+                            <a href="https://slack.com/" target="_blank" rel="noreferrer" ><i class="devicon devicon-slack-plain-wordmark colored"></i></a>
 
                         </div>
                     </div>
 
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href=""> <i class="devicon devicon-npm-original-wordmark colored"></i>
+                             <a href="https://www.npmjs.com/" target="_blank" rel="noreferrer"> <i class="devicon devicon-npm-original-wordmark colored"></i>
                             </a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://nodejs.org/en/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-nodejs-plain-wordmark colored"></i>
 
                             </a>
@@ -77,7 +75,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://www.mysql.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-mysql-plain-wordmark colored"></i>
 
                             </a>
@@ -85,7 +83,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://jquery.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-jquery-plain-wordmark colored"></i>
 
                             </a>
@@ -93,7 +91,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://www.javascript.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-javascript-plain colored"></i>
 
                             </a>
@@ -101,7 +99,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-html5-plain-wordmark colored"></i>
 
                             </a>
@@ -109,7 +107,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://devcenter.heroku.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-heroku-plain-wordmark colored"></i>
 
                             </a>
@@ -117,7 +115,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://handlebarsjs.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-handlebars-plain-wordmark colored"></i>
 
                             </a>
@@ -125,7 +123,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://git-scm.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-git-plain-wordmark colored"></i>
 
                             </a>
@@ -133,7 +131,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://expressjs.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-express-original colored"></i>
 
                             </a>
@@ -141,7 +139,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-css3-plain-wordmark colored"></i>
 
                             </a>
@@ -149,7 +147,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://developers.google.com/web/tools/chrome-devtools" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-chrome-plain-wordmark colored"></i>
 
                             </a>
@@ -157,7 +155,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
 
                             </a>
@@ -165,7 +163,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://travis-ci.org/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-travis-plain-wordmark colored"></i>
 
                             </a>
@@ -173,9 +171,15 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
-                            <a href="">
+                            <a href="https://code.visualstudio.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-visualstudio-plain-wordmark colored"></i>
-
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                            <a href="https://gitlab.com/gitlab-com" target="_blank" rel="noreferrer">
+                                <i class="devicon devicon-gitlab-plain-wordmark colored"></i>
                             </a>
                         </div>
                     </div>
