set up back end to serve resume as pdf

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -21,7 +21,7 @@
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/contact"><button type="button"
                         class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
-                <a href="/public/Resume 12:5.pdf"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
+                <a href="/resume"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
     </div>
