--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -17,7 +17,7 @@
                 </div>
                 <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
-                <a href="/public/Resume 12:5.pdf" target="blank"><button type="button"
+                <a href="/resume" target="blank"><button type="button"
                         class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
