--- a/views/contact-success.handlebars
+++ b/views/contact-success.handlebars
@@ -18,7 +18,7 @@
                 <a href="/portfolio"><button type="button"
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
-                <a href="/public/Resume 12:5.pdf"><button type="button"
+                <a href="/resume"><button type="button"
                         class="btn btn-sm shadow btn-resume">Resume</button></a>
             </div>
         </div>
