--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -23,9 +23,9 @@
         </div>
     </div>
 
-    <div class="row projects-row">
+    <div class="row projects-row d-flex justify-content-center">
         {{#each currentProjects}}
-        <div class="col-md-4">
+        <div class="col-sm-12 col-md-10 col-lg-6">
             <figure class="overlay shadow">
                 <a href="{{url}}" target="_blank" rel="noreferrer"><img id="overlay-img" class="overlay-img shadow"
                         src="{{openGraphImageUrl}}" alt="Still image of {{name}}">
@@ -42,16 +42,21 @@
 
     <div class="row fab-row d-flex justify-content-center">
         <div class="">
-            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer" aria-label="Link to my github page"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"
+                aria-label="Link to my github page"><i class="fab fa-github fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer" aria-label="Link to my linkedin page"><i class="fab fa-linkedin-in fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"
+                aria-label="Link to my linkedin page"><i class="fab fa-linkedin-in fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer" aria-label="Link to my instagram page"><i class="fab fa-instagram fa-3x text-dark"></i></a>
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"
+                aria-label="Link to my instagram page"><i class="fab fa-instagram fa-3x text-dark"></i></a>
         </div>
         <div class="">
-            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer" aria-label="Link to my amazon product page"><i class="fab fa-amazon fa-3x text-dark"></i></a>
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"
+                rel="noreferrer" aria-label="Link to my amazon product page"><i
+                    class="fab fa-amazon fa-3x text-dark"></i></a>
         </div>
     </div>
 </div>
