--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Portfolio">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://andrewmosesdev.herokuapp.com/">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://github.com/andrewmosesdrive/portfolio_v2/blob/main/public/images/social-preview.png?raw=true">
     {{!-- bootstrap --}}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
