--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -67,6 +67,12 @@
                     </div>
                     <div class="carousel-item">
                         <div class="img-container-icon">
+                             <a href="https://webpack.js.org/" target="_blank" rel="noreferrer"> <i class="devicon devicon-webpack-plain-wordmark colored"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
                             <a href="https://nodejs.org/en/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-nodejs-plain-wordmark colored"></i>
 
