--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -41,6 +41,13 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="img-container-icon">
+                            <a href="https://reactjs.org/" target="_blank" rel="noreferrer">
+                                <i class="devicon devicon-react-original-wordmark colored"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
                             <a href="https://www.mongodb.com/" target="_blank" rel="noreferrer">
                                 <i class="devicon devicon-mongodb-plain-wordmark colored"></i>
                             </a>
@@ -49,6 +56,12 @@
                     <div class="carousel-item">
                         <div class="img-container-icon">
                              <a href="https://sequelize.org/" target="_blank" rel="noreferrer"> <i class="devicon devicon-sequelize-plain-wordmark colored"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-container-icon">
+                             <a href="https://aws.amazon.com/amplify/" target="_blank" rel="noreferrer"> <i class="devicon devicon-amazonwebservices-plain-wordmark colored"></i>
                             </a>
                         </div>
                     </div>
