updated text coloring; removed 'navigation' headline

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,8 +4,7 @@
             <div class="jumbotron bg-dark shadow">
                 <h1 class="display-3" style="color: #ececec;">Hello<span style="color: #c095e9;"> World!</span></h1>
                 <hr class="my-4">
-                <h5 style="color: #ececec;">My name is Andrew Moses. I'm a Full-Stack Web Developer, Team Leader for
-                    DevCore, and author. </h5>
+                <h5 style="color: #ececec;">My name is Andrew Moses. I'm a Full-Stack Web Developer focused on creating unique, accessible, and user-friendly applications. I'm also a Team Captain for DevCore, and author. </h5>
                 <h5 style="color: #ececec;">Curious about coding projects I'm working on, or interested in contacting
                     me? Just follow the big purple Navigation buttons. Interested in my social media or my writing? Just
                     follow the links at the bottom of each page. Thanks for stopping by! </h5>
@@ -15,7 +14,7 @@
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
-                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                    {{!-- <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3> --}}
                 </div>
                 <a href="/portfolio"><button type="button"
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
@@ -29,9 +28,7 @@
     <div class="row">
         <div class="col-sm-12 col-lg-4">
             <div class="card-body card-tools">
-                <h3 class="text-dark">Here are some of the <span style="color: #7332af;">tools </span>I use on a daily basis. Click an <span style="color: #7332af;">icon </span> to check them out, or use the <span style="color: #7332af;">arrows </span> to navigate!</h3>
-
-
+                <h3 class="text-dark">Here are some of the tools I use on a daily basis. Click an icon to check them out, or use the arrows to navigate!</h3>
             </div>
 
 
