--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -12,7 +12,7 @@
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
-                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                    {{!-- <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3> --}}
                 </div>
                 <a href="/portfolio"><button type="button"
                         class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
