--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -13,7 +13,7 @@
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
-                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                    {{!-- <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3> --}}
                 </div>
                 <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
