updated resume; updated portfolio buttons to read 'projects'; need to switch from carousel to panel view; need to configure deployment vs repo links; added email address for default

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -17,7 +17,7 @@
                     {{!-- <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3> --}}
                 </div>
                 <a href="/portfolio"><button type="button"
-                        class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                        class="btn btn-sm shadow btn-portfolio">Projects</button></a>
                 <a href="/contact"><button type="button"
                         class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
                 <a href="/resume"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
