--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -4,7 +4,7 @@
             <div class="jumbotron bg-dark shadow">
                 <h1 class="display-3" style="color: #ececec;">Say<span style="color: #c095e9;"> Hello</span></h1>
                 <hr class="my-4">
-                <h5 style="color: #ececec;">Use the form below to shoot me an email. If you'd prefer reaching out via
+                <h5 style="color: #ececec;">Use the form below to shoot me an email or send me one with your default email at <span><a style="color: #c095e9"  href="mailto:andrewmosesdrive@gmail.com">andrewmosesdrive@gmail.com</a></span> . If you'd prefer reaching out via
                     social media, or you're curious about my writing, take your pick from the links at the very
                     bottom of each page.</h5>
             </div>
@@ -15,7 +15,7 @@
                     {{!-- <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3> --}}
                 </div>
                 <a href="/portfolio"><button type="button"
-                        class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                        class="btn btn-sm shadow btn-portfolio">Projects</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
                 <a href="/resume"><button type="button"
                         class="btn btn-sm shadow btn-resume">Resume</button></a>
